[tool.poetry]
name = "scroll-origins-minter"
version = "0.1.0"
description = ""
authors = ["Alex Kvasha <alex.kvasha.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
web3 = "^6.12.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
